--- a/microcms-next/package.json
+++ b/microcms-next/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@hookform/resolvers": "^2.9.6",
+    "@mui/material": "^5.9.1",
+    "@react-google-maps/api": "^2.12.1",
+    "@types/node": "^18.0.6",
     "axios": "^0.27.2",
     "microcms-js-sdk": "^2.0.0",
-    "next": "12.2.0",
+    "next": "^12.2.0",
+    "next-auth": "^4.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-use-state": "^1.1.0"
+    "react-hook-form": "^7.33.1",
+    "react-hook-use-state": "^1.1.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.19.0",
