--- a/microcms-next/.env
+++ b/microcms-next/.env
@@ -3,4 +3,8 @@ NEXT_PUBLIC_G_API_KEY=AIzaSyA91Neh258HJkE8lIvyaZw8hSkuJ_p3euE
 NEXT_PUBLIC_Url=care
 NEXT_PUBLIC_sdsad=categories
 NEXT_PUBLIC_GOOGLE_CLIENT_ID=577616181608-hh5hdok6ctobeqjgn5h6chr1q7j6eoci.apps.googleusercontent.com
-NEXT_PUBLIC_GOOGLE_CLIENT_SECRET=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
+vGOOGLE_CLIENT_SECRET=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
+
+NEXTAUTHUrl=https://care.vercel.app
+GOOGLE_CLIENT_ID=577616181608-hh5hdok6ctobeqjgn5h6chr1q7j6eoci.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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s
